# translator-challenge

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/: config.py  db.py  enums.py  google_api.py  main.py  router.py  schemas.py  system.py
